<resources>
    <string name="app_name">MY</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registred">Not Registred</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_register">Already Register?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
